Fix bugs
Some buttons are overlapped in manage account page.
Not to show password when changing password in manage account page.
Show finger for mouse pointer when hovering tab.

--- a/public/css/eventsListOnProfile.css
+++ b/public/css/eventsListOnProfile.css
@@ -13,10 +13,12 @@ section>div:first-child {
     height: 30px;
     margin-bottom: 10px;
 }
-
 #myEventsWrapper .selected {
     border-bottom: 5px solid #FF3864; /* #72ddf7 */
     font-family: "MontserratBold", sans-serif;
+}
+#myEvents, #attendingEvents {
+    cursor: pointer;
 }
 
 /* No Events */
@@ -62,14 +64,6 @@ section>div:first-child {
     }
 }
 
-/* .item>.content {
-    display: flex;
-    flex-direction: column;
-
-} */
-.item>.content>div {
-    padding-bottom: 0px;
-}
 .item .content {
     display: flex;
 }
